changed sample prog

--- a/FulminateCPU2/FulminateCPU2.runs/impl_1/.xdl.begin.rst
+++ b/FulminateCPU2/FulminateCPU2.runs/impl_1/.xdl.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="xdl" Owner="Nicholas" Host="ZOIDBERG" Pid="15324">
+    <Process Command="xdl" Owner="Nicholas" Host="NICKSLAPTOP" Pid="5132">
     </Process>
 </ProcessHandle>
