--- a/FulminateCPU2/FulminateCPU2.runs/impl_1/.bitgen.begin.rst
+++ b/FulminateCPU2/FulminateCPU2.runs/impl_1/.bitgen.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="bitgen" Owner="Nicholas" Host="ZOIDBERG" Pid="4540">
+    <Process Command="bitgen" Owner="Nicholas" Host="NICKSLAPTOP" Pid="2156">
     </Process>
 </ProcessHandle>
