--- a/FulminateCPU2/FulminateCPU2.runs/impl_1/.trce.begin.rst
+++ b/FulminateCPU2/FulminateCPU2.runs/impl_1/.trce.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="trce" Owner="Nicholas" Host="ZOIDBERG" Pid="340">
+    <Process Command="trce" Owner="Nicholas" Host="NICKSLAPTOP" Pid="6192">
     </Process>
 </ProcessHandle>
