--- a/FulminateCPU2/FulminateCPU2.runs/synth_1/.xst.begin.rst
+++ b/FulminateCPU2/FulminateCPU2.runs/synth_1/.xst.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="xst" Owner="Nicholas" Host="ZOIDBERG" Pid="32668">
+    <Process Command="xst" Owner="Nicholas" Host="NICKSLAPTOP" Pid="2344">
     </Process>
 </ProcessHandle>
